[backend] test(chaining): renamed new mentions of exercise to simulation